fix: trivial: lists bullets alignment

--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -117,18 +117,24 @@
 
       ul,
       ol {
-        @apply my-2.5 pl-5 xl:my-2 sm:pl-2.5;
+        @apply my-2.5 pl-5 xl:my-2 sm:pl-2;
       }
     }
 
     ol {
+      @apply pl-8 sm:pl-4;
+
+      ol {
+        @apply pl-4 sm:pl-1;
+      }
+
       li {
-        @apply pl-2;
+        @apply pl-1;
       }
     }
 
     li {
-      @apply my-2.5 pl-0 xl:my-2;
+      @apply mt-2.5 mb-0 pl-0 first:mt-0;
 
       &::marker {
         @apply font-semibold text-primary-1;
